# yap-to-text

./: .gitignore  README.md  package-lock.json  package.json
public/: overlay.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: audio.rs  lib.rs  main.rs  modes.rs  ollama.rs  whisper.rs
