[package]
name = "yap-to-text"
version = "0.1.0"
description = "A free, local voice-to-text app like WhisperFlow"
authors = ["you"]
edition = "2021"

[lib]
name = "yap_to_text_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio capture
cpal = "0.15"
hound = "3.5"       # WAV file handling

# Whisper transcription
whisper-rs = "0.12"

# HTTP client for Ollama
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Clipboard
arboard = "3"

# Logging
log = "0.4"
env_logger = "0.11"

# System directories
dirs = "5"

